--- a/Fun_game/flask_app/testing/html-andrea/css/style_home.css
+++ b/Fun_game/flask_app/testing/html-andrea/css/style_home.css
@@ -51,12 +51,16 @@ button {
 
 }
 
+button:active {
+    background-color: #181b2b;
+    color: white;
+}
+
 footer {
     font-weight: normal;
     font-size: 2rem;
     bottom: 35px;
     text-align: center;
-    vertical-align: middle;
     position: fixed;
     width: 100%;
 }
