--- a/Fun_game/flask_app/testing/templates/home.html
+++ b/Fun_game/flask_app/testing/templates/home.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <title>Fun Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style_home.css" rel="stylesheet">
+    <link href="../static/css/style_home.css" rel="stylesheet">
 
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Fun Game</h1>
+            <h1>Fun_Game</h1>
         </header>
         <form action="#">
-            <input type="text" name="player_name" placeholder="Enter player name">
+            <label>
+                <input type="text" name="player_name" placeholder="Enter player name">
+            </label>
             <input type="submit" value="OK">
         </form>
         <a href="game.html">
@@ -22,7 +24,7 @@
         <footer>
             Developed by: Mohamed, Jeferson, Andrea, Immi
         </footer>
-
+      <script src="../static/script.js"></script>
     </div>
 </body>
 </html>
