--- a/Fun_game/flask_app/testing/templates/gameover.html
+++ b/Fun_game/flask_app/testing/templates/gameover.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Fun Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style_gameover.css" rel="stylesheet">
+    <link href="../static/css/style_gameover.css" rel="stylesheet">
 </head>
 <body>
     <div class="container">
