--- a/Fun_game/flask_app/testing/templates/gameover.html
+++ b/Fun_game/flask_app/testing/templates/gameover.html
@@ -5,6 +5,7 @@
     <title>Fun Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="../static/css/style_gameover.css" rel="stylesheet">
+    <script src="../static/js/script.js"></script>
 </head>
 <body>
     <div class="container">
