--- a/Fun_game/flask_app/testing/templates/game.html
+++ b/Fun_game/flask_app/testing/templates/game.html
@@ -5,9 +5,10 @@
     <title>Fun Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="../static/css/style_game.css" rel="stylesheet">
+    <script src="../static/js/script.js"></script>
 </head>
 <body>
-    <section id= "gamescreen">
+    <section id="gamescreen">
         <img src="../static/img/gameplay.jpg" id="gameplay" alt="gameplay">
     </section>
     <section id="topright">
@@ -33,5 +34,6 @@
             </a>
         </section>
     </section>
+    </element>
 </body>
 </html>
