--- a/Fun_game/flask_app/testing/templates/home.html
+++ b/Fun_game/flask_app/testing/templates/home.html
@@ -5,6 +5,7 @@
     <title>Fun Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="../static/css/style_home.css" rel="stylesheet">
+    <script src="../static/js/script.js"></script>
 
 </head>
 <body>
@@ -12,7 +13,7 @@
         <header>
             <h1>Fun_Game</h1>
         </header>
-        <form action="#">
+        <form>
             <label>
                 <input type="text" name="player_name" placeholder="Enter player name">
             </label>
@@ -24,7 +25,13 @@
         <footer>
             Developed by: Mohamed, Jeferson, Andrea, Immi
         </footer>
-      <script src="../static/script.js"></script>
     </div>
 </body>
 </html>
+
+<!-- <div id="player-modal">
+        <form id="player-form">
+            <input id="player-input" type="text" placeholder="Player name" required>
+            <input type="submit" value="OK">
+        </form>
+    </div> -->
