working on creating and connecting the JS

--- a/Fun_game/flask_app/testing/templates/game.html
+++ b/Fun_game/flask_app/testing/templates/game.html
@@ -11,7 +11,7 @@
         <img src="../static/img/gameplay.jpg" id="gameplay" alt="gameplay">
     </section>
     <section id="topright">
-        <p>Username: </p>
+        <p>Username: </p> <!-- todo add IDs to the fields so we can add data to them with js -->
         <p>Current item: </p>
         <p>Current location: </p>
         <img src="../static/img/compass.png" id="compass" alt="compass">
