--- a/Fun_game/flask_app/testing/templates/home.html
+++ b/Fun_game/flask_app/testing/templates/home.html
@@ -12,12 +12,15 @@
         <header>
             <h1>Fun_Game</h1>
         </header>
-        <form action="#">
+    <div id="player-modal">
+        <form id="player-form">
             <label>
                 <input type="text" name="player_name" placeholder="Enter player name">
             </label>
             <input type="submit" value="OK">
         </form>
+    </div>
+
         <a href="game.html">
             <button>START GAME</button>
         </a>
