--- a/Fun_game/flask_app/testing/templates/game.html
+++ b/Fun_game/flask_app/testing/templates/game.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     <section id="gamescreen">
-        <img src="../static/img/gameplay.jpg" id="gameplay" alt="gameplay">
+        <section>
+            <img src="../static/img/gameplay.jpg" class="map" alt="gameplay">
+        </section>
     </section>
     <section id="topright">
-        <p>Username: </p> <!-- todo add IDs to the fields so we can add data to them with js -->
-        <p>Current item: </p>
-        <p>Current location: </p>
+        <p id="username">Username: </p> <!-- todo add IDs to the fields so we can add data to them with js -->
+        <p id="current_item"></p>
+        <p id="current_location"></p>
         <img src="../static/img/compass.png" id="compass" alt="compass">
     </section>
     <section id="textbox">
