--- a/Fun_game/flask_app/testing/templates/home.html
+++ b/Fun_game/flask_app/testing/templates/home.html
@@ -27,7 +27,7 @@
         <footer>
             Developed by: Mohamed, Jeferson, Andrea, Immi
         </footer>
-      <script src="../static/script.js"></script>
+      <script src="../static/js/script.js"></script>
     </div>
 </body>
 </html>
