added location infos to database, getting rid of hardcoded data, added fun_game to flask, added more mockup data for testing, more JS implementation

--- a/Fun_game/flask_app/testing/templates/game.html
+++ b/Fun_game/flask_app/testing/templates/game.html
@@ -39,6 +39,7 @@
     </div>
     <div id="bottomright">
         <section id="user_data">
+            <input type="hidden" name="input_username" id="input_username">
             <p class="gametext" id="username">Username: NoScope360</p>
             <p class="gametext" id="current_item">Current item: None</p>
             <p class="gametext" id="current_location">Current location: Hut</p>
