--- a/Fun_game/flask_app/testing/templates/game.html
+++ b/Fun_game/flask_app/testing/templates/game.html
@@ -27,7 +27,7 @@
                 it if you answer my riddle correctly:</p>
             <p class="gametext" id="riddle_question">Had at work day and night, it counts the numbers over and over. Although it counts
                 all its life, it never gets past twelve.</p>
-            <p class="gametext"><input type="text" name="riddle_user_input" id="riddle_user_input"></p>
+            <p class="gametext"><label for="riddle_user_input"></label><input type="text" name="riddle_user_input" id="riddle_user_input"></p>
             <button class="button" id="submit_riddle_answer">SUBMIT ANSWER</button>
             <p class="gametext" id="riddle_correct_answer">Correct answer: Clock</p>
         </section>
@@ -40,7 +40,7 @@
     <div id="bottomright">
         <section id="user_data">
             <input type="hidden" name="input_username" id="input_username">
-            <p class="gametext" id="username">Username: NoScope360</p>
+            <p class="gametext" id="username">Username: None</p>
             <p class="gametext" id="current_item">Current item: None</p>
             <p class="gametext" id="current_location">Current location: Hut</p>
         </section>
