--- a/Fun_game/flask_app/testing/templates/game.html
+++ b/Fun_game/flask_app/testing/templates/game.html
@@ -27,8 +27,10 @@
                 it if you answer my riddle correctly:</p>
             <p class="gametext" id="riddle_question">Had at work day and night, it counts the numbers over and over. Although it counts
                 all its life, it never gets past twelve.</p>
-            <p class="gametext"><label for="riddle_user_input"></label><input type="text" name="riddle_user_input" id="riddle_user_input"></p>
-            <button class="button" id="submit_riddle_answer">SUBMIT ANSWER</button>
+            <p class="gametext"><label for="riddle_user_input"></label>
+                <input type="text" name="riddle_user_input" id="riddle_user_input">
+                <button class="button" id="submit_riddle_answer">SUBMIT ANSWER</button>
+            </p>
             <p class="gametext" id="riddle_correct_answer">Correct answer: Clock</p>
         </section>
         <section id="item_pickup" class="hide">
@@ -47,12 +49,9 @@
         <section id="interrupt_buttons">
             <section>
             <a href="home.html">
-                <button class="button" id="restart_button">RESTART</button>
-            </a>
-            </section>
-            <section>
-            <a href="gameover.html">
+                <button class="button" id="restart_button">RESTART</button><a href="gameover.html">
                 <button class="button" id="quit_button">QUIT</button>
+            </a>
             </a>
             </section>
         </section>
