--- a/templates/home.html
+++ b/templates/home.html
@@ -13,11 +13,11 @@
             <h1>Fun_Game</h1>
         </header>
     <div id="player-modal">
-        <form id="player-form">
+        <form id="player-form" action="/create_player" method="post">
             <label>
-                <input type="text" name="player_name" placeholder="Enter player name">
+                <input type="text" name="input_username" placeholder="Enter player name">
             </label>
-            <input type="submit" value="OK">
+            <input type="submit" value="START GAME">
         </form>
     </div>
 
