--- a/static/css/style_game.css
+++ b/static/css/style_game.css
@@ -113,7 +113,10 @@ body {
     margin-bottom: 30px;
     margin-top: 30px;
     width: 112%;
+    background-repeat: no-repeat;
+    background-size: contain;
     border: 6px solid white;
+    min-height: 400px;
 }
 
 #textbox {
