--- a/templates/game.html
+++ b/templates/game.html
@@ -48,13 +48,8 @@
             <p class="gametext" id="current_location">Current location: Hut</p>
         </section>
         <section id="interrupt_buttons">
-            <section>
-            <a href="home.html">
-                <button class="button" id="restart_button">RESTART</button><a href="gameover.html">
-                <button class="button" id="quit_button">QUIT</button>
-            </a>
-            </a>
-            </section>
+            <a href="home.html" class="a"><button class="button" id="restart_button">RESTART</button></a>
+            <a href="gameover.html" class="a"><button class="button" id="quit_button">QUIT</button></a>
         </section>
     </div>
 </div>
