Added map border

--- a/templates/game.html
+++ b/templates/game.html
@@ -18,7 +18,7 @@
     </div>
     <div id="topright">
         <section id="map_box">
-            <div class="map"></div>
+            <img src="../static/img/maps/border.png" alt="borber" class="map">
             <!--<img src="../static/img/maps/maze_map.png" class="map" alt="gameplay">-->
         </section>
     </div>
