--- a/templates/game.html
+++ b/templates/game.html
@@ -12,8 +12,7 @@
 <div id="main">
     <div id="topleft">
         <section id="textbox">
-            <p class="gametext">A worn-down hut stands near the entrance to the forest. An old man is sitting on the
-                porch, carving a wooden figure. From the looks of it, he is making a wooden wolf.</p>
+            <p class="gametext"></p>
         </section>
     </div>
     <div id="topright">
@@ -24,18 +23,16 @@
     </div>
     <div id="bottomleft">
         <section id="encounter" class="hide">
-            <p class="gametext" id="encounter_text">The old man looks at you and says: "I have some gift for you, kid. But you only get
-                it if you answer my riddle correctly:</p>
-            <p class="gametext" id="riddle_question">Had at work day and night, it counts the numbers over and over. Although it counts
-                all its life, it never gets past twelve.</p>
+            <p class="gametext" id="encounter_text"></p>
+            <p class="gametext" id="riddle_question">riddle</p>
             <p class="gametext"><label for="riddle_user_input"></label>
                 <input type="text" name="riddle_user_input" id="riddle_user_input">
                 <button class="button" id="submit_riddle_answer">SUBMIT ANSWER</button>
             </p>
-            <p class="gametext" id="riddle_correct_answer">Correct answer: Clock</p>
+            <p class="gametext" id="riddle_correct_answer"></p>
         </section>
         <section id="item_pickup" class="hide">
-            <p class="gametext" id="item_pickup_text">You answered the riddle correctly! The old man hands you an amulet. Do you take it?</p>
+            <p class="gametext" id="item_pickup_text"></p>
             <button class="item_button" id="item_yes_button">YES</button>
             <button class="item_button" id="item_no_button">NO</button>
         </section>
