fixed the sql lag and handling existing players

--- a/templates/home.html
+++ b/templates/home.html
@@ -15,15 +15,12 @@
     <div id="player-modal">
         <form id="player-form" action="/create_player" method="post">
             <label>
-                <input type="text" name="input_username" placeholder="Enter player name">
+                <input id="player_name" type="text" name="input_username" placeholder="Enter player name">
             </label>
             <input type="submit" value="START GAME">
         </form>
     </div>
 
-        <a href="game.html">
-            <button>START GAME</button>
-        </a>
         <footer>
             Developed by: Mohamed, Jeferson, Andrea, Immi
         </footer>
